--- a/resources/index.html
+++ b/resources/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div id="app"></div>
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Francois+One' rel='stylesheet' type='text/css'/>
     <script src="/js/app.js" type="text/javascript"></script>
   </body>
 </html>
